# langchain

./: .env.example  .gitignore  README.md  pyproject.toml
data/: README.md
data/resources/: 2.1_mcp_server.py
infografiche/: Architettura RAG.html  ChatbotAgentOrchestrazione.html  Checkpointers.html  Ecosistema Agenti 2026.html  Ecosistema LangChain.html  EdgeAI.html  Langgraph_perche.html  MCP.html  Orchestrazione.html  Pattern_orchestrazione.html  TrendAI.html
langgraph/: 01_LangGraph.ipynb  02_LangGraph.ipynb  04_LangGraph.ipynb
lezioni/: 01.5_state_and_context.ipynb  01_introduzione.ipynb  02.5_mcp_dynamic_wrappers.ipynb  02_agenti_avanzati.ipynb  03.5_LangGraph.ipynb  03_Embeddings.ipynb  03_LangGraph.ipynb
studio/: chef.py  langgraph.json
